change http urls, update deps
